force-app/src/objects/cpm__Payment_Service_Provider__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Config_Screen__c</fullName>
        <label>Config Screen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Global_Target__c</fullName>
        <label>Global Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Setup_Class__c</fullName>
        <label>Setup Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Support_Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Bulk</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Service Provider</label>
</CustomObject>